--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
-}
+/* 
+font-family: 'Open Sans', sans-serif;
+font-family: 'Titillium Web', sans-serif; 
+*/
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/*
+red/accent color - #ff5959 rgb(255, 89, 89)
+dark blue-gray - #676fa3 rgb(103, 111, 163)
+darker blue-gray - #252F6A rgb(37, 47, 106)
+pale blue-gray - #cddeff rgb(205, 222, 255)
+gray - #eef2ff rgb(238, 242, 255)
+*/
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
