--- a/src/components/Courses/courses.css
+++ b/src/components/Courses/courses.css
@@ -1,10 +1,11 @@
 .courses {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   background-color: #cddeff;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 100px;
 }
 
 .courses h2 {
@@ -40,6 +41,7 @@ flex-wrap: wrap;
 
 .course-item {
     width: 300px;
+    height: 250px;
     margin: 10px 20px;
     /* display: flex;
     align-items: center;
@@ -53,14 +55,18 @@ flex-wrap: wrap;
 width: 100%;
 border-bottom: 2px solid #cddeff;
 border-radius: 5px 5px 0px 0px;
+height: 120px;
 }
 
 .course-item-title {
 font-family: 'Titillium Web', sans-serif;
-text-align: center; 
+text-align: center;
+color: #eef2ff; 
 }
 
 .course-item p {
     display: inline-block;
     padding: 7px;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
 }
