--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,5 +1,65 @@
 .about {
-    min-height: 100vh;
-    background-color: darkgoldenrod;
+  background-color: #eef2ff;
+  width: 100%;
+}
+
+.about h2 {
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-transform: uppercase;
+  font-family: "Open Sans", sans-serif;
+  font-size: 40px;
+  font-weight: 300;
+  letter-spacing: 2.2px;
+}
+
+.about-wrapper {
+  width: 80%;
+  margin: 0 auto;
+  /* border: 1px solid red; */
+}
+
+.about-items {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  /* border: 1px solid blue; */
+}
+
+.about-icon {
+  font-size: 150px;
+  color: #676fa3;
+}
+
+.about-text {
+  font-family: "Open Sans", sans-serif;
+  font-size: 18px;
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.about-image-gallery {
+    width: 100%;
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    margin-top: 40px;
+}
+
+.about-image-gallery:last-child {
+    margin-top: -5px;
+    margin-bottom: -5px;
+}
+
+.about-image-box {
+width: 33%;
+}
+
+.about-image {
     width: 100%;
 }
