--- a/src/components/Courses/courses.css
+++ b/src/components/Courses/courses.css
@@ -43,12 +43,10 @@ flex-wrap: wrap;
     width: 300px;
     height: 250px;
     margin: 10px 20px;
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
     background-color: #252F6A;
     color: white;
     border-radius: 5px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .course-item-img {
