added responsive design to entire site

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -63,3 +63,47 @@ width: 33%;
 .about-image {
     width: 100%;
 }
+
+@media screen and (max-width: 600px) {
+  .about h2 {
+  font-size: 30px;
+  padding-bottom: 30px;
+}
+.about-wrapper {
+  width: 100%;
+}
+.about-items {
+  width: 80%;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.about-icon {
+  font-size: 100px;
+  margin-bottom: 15px;
+}
+
+.about-image-gallery {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    margin-top: 40px;
+}
+
+.about-image-gallery:last-child {
+    margin-top: -5px;
+    margin-bottom: -5px;
+}
+
+.about-image-box {
+width: 100%;
+margin-top: -4px;
+}
+
+.about-image {
+    width: 100%;
+}
+}
