--- a/src/components/Courses/list/list.css
+++ b/src/components/Courses/list/list.css
@@ -19,3 +19,14 @@
     background-color: #252F6A;
     color: #ff5959;
 }
+
+@media screen and (max-width: 600px) {
+    .list {
+        margin: 0 auto;
+        width: 100%;
+        margin-bottom: 0px;
+        border-bottom: 1px solid #676fa3;
+        text-align: center;
+        border-radius: 0px;
+    }
+}
