--- a/src/components/splash/splash.css
+++ b/src/components/splash/splash.css
@@ -105,3 +105,34 @@
   background-color: #ff5959;
   transition: 0.6s;
 }
+
+/*--- RESPONSIVE DESIGN ---*/
+
+@media screen and (max-width: 600px) {
+  .splash-content h1 {
+    font-size: 40px;
+    padding-top: 100px;
+    margin-bottom: 50px;
+    z-index: 0;
+  }
+
+  .splash-btn {
+  display: block;
+  text-align: center;
+  margin-top: 40px;
+  font-weight: 700;
+  letter-spacing: 2.4px;
+  font-size: 20px;
+  border: 2px solid #ff5959;
+  color: #eef2ff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: 0.6s;
+}
+}
+
+@media screen and (max-width: 320px) {
+  .splash {
+    padding-bottom: 50px;
+  }
+}
