--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -103,10 +103,26 @@
   padding: 20px;
 }
 
-.form-input {
+.form-group {
+  flex-direction: column;
+  height: 70px;
+    /* border: 1px solid red; */
+}
+
+.label-box {
+  text-align: left;
+  /* border: 1px solid red; */
+  width: 100%;
   margin-left: 20px;
+  padding-bottom: 10px;
+}
+
+.form-input {
+  margin-left: 0px;
   font-size: 14px;
   border-radius: 0px;
+  width: 100%;
+  height: 50px;
 }
 
 .text-area {
