--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -6,4 +6,6 @@
     text-align: center;
     display: inline-block;
     padding-top: 40px;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 14px;
 }
