--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -3,8 +3,8 @@
   width: 100%;
   background-color: #252f6a;
   border-bottom: 2px solid #676fa3;
-  /* position: fixed;
-  z-index: 1000; */
+  position: fixed;
+  z-index: 9999;
 }
 
 .logo {
@@ -55,7 +55,7 @@
 
 /*--- RESPONSIVE NAVBAR ---*/
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .navbar {
     margin: 0;
     padding: 0;
@@ -70,7 +70,6 @@
     padding: 0;
     float: left;
     background-color: #252f6a;
-    /* padding-top: 55px; */
     margin-top: -5px;
   }
   .nav-item {
@@ -84,7 +83,6 @@
 
   .nav-item:hover {
     color: #ff5959;
-    background-color: chocolate;
   }
 
   .nav-btn {
