--- a/src/components/splash/splash.css
+++ b/src/components/splash/splash.css
@@ -13,7 +13,7 @@
 .splash {
   min-height: calc(100vh - 60px);
   background-color: rgba(0, 0, 0, 0.7);
-  /* position: relative; */
+  position: relative;
 }
 
 .splash-content {
@@ -21,9 +21,13 @@
   color: #eef2ff;
   z-index: 1000;
   font-family: "Open Sans", sans-serif;
-  margin: 0 auto;
-  position: relative;
-  padding-bottom: 100px;
+  /* margin: 0 auto; */
+  padding-top: 50px;
+  padding-bottom: 150px;
+    top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
 }
 
 .splash-content h1 {
@@ -32,7 +36,10 @@
   letter-spacing: 1.7px;
   font-size: 60px;
   text-align: center;
-  padding-top: 15%;
+  /* top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, 50%); */
 }
 
 .splash-title {
@@ -97,7 +104,7 @@
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translate(-50%, -0%);
+  transform: translate(-50%, 0%);
   transition: 0.6s;
 }
 
@@ -109,29 +116,33 @@
 /*--- RESPONSIVE DESIGN ---*/
 
 @media screen and (max-width: 600px) {
+  .splash-content {
+    z-index: 0;
+  }
+  
   .splash-content h1 {
     font-size: 40px;
-    padding-top: 100px;
     margin-bottom: 50px;
-    z-index: 0;
   }
 
   .splash-btn {
-  display: block;
-  text-align: center;
-  margin-top: 40px;
-  font-weight: 700;
-  letter-spacing: 2.4px;
-  font-size: 20px;
-  border: 2px solid #ff5959;
-  color: #eef2ff;
-  padding: 5px 10px;
-  border-radius: 5px;
-  transition: 0.6s;
-}
+    display: block;
+    text-align: center;
+    margin-top: 40px;
+    font-weight: 700;
+    letter-spacing: 2.4px;
+    font-size: 20px;
+    border: 2px solid #ff5959;
+    color: #eef2ff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: 0.6s;
+    margin-bottom: 50px;
+  }
 }
 
 @media screen and (max-width: 320px) {
+
   .splash {
     padding-bottom: 50px;
   }
