--- a/src/components/splash/splash.css
+++ b/src/components/splash/splash.css
@@ -117,6 +117,17 @@
   .splash-content h1 {
     font-size: 44px;
   }
+
+  .splash-btn {
+    width: 55%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+  .splash-btn {
+    width: 65%;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -129,20 +140,15 @@
     margin-bottom: 50px;
   }
 
+    .splash-title-item {
+    font-size: 34px;
+  }
+
   .splash-btn {
     display: block;
-    text-align: center;
     margin-top: 40px;
-    font-weight: 700;
-    letter-spacing: 2.4px;
     font-size: 20px;
-    border: 2px solid #ff5959;
-    color: #eef2ff;
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: 0.6s;
     margin-bottom: 50px;
-    width: 65%;
   }
 }
 
